# snowdevice

./: CMakeLists.txt  notes.txt  snowdevice.sln
Debug/: snowdevice.ilk
Linux/Linux32/: SampleOmni
Linux/Linux64/: SampleOmni
snowdevice/snowdevice/: snowdevice.vcxproj  snowdevice.vcxproj.filters
snowdevice/snowdevice/Debug/: vc140.idb
snowdevice/snowdevice/Debug/snowdevice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  snowdevice.lastbuildstate
src/: AABB.cpp  Corridor.cpp  Inventory.cpp  Level.cpp  Node.cpp  engine.cpp  input.cpp  player.cpp  position.cpp  snowdevice.vcxproj  start.cpp
src/include/: Corridor.h  Inventory.h  Level.h  engine.h  input.h  player.h  position.h
